# Todo-App-Phase-1-Console-App

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: sp.checklist.md  sp.clarify.md  sp.implement.md  sp.taskstoissues.md
.specify/memory/: constitution.md
.specify/scripts/powershell/: create-new-feature.ps1  update-agent-context.ps1
.specify/templates/: tasks-template.md
history/prompts/constitution/: 1-amend-constitution.constitution.prompt.md
history/prompts/todo-cli-app/: 2-create-todo-spec.spec.prompt.md  3-create-impl-plan.plan.prompt.md  4-create-todo-tasks.tasks.prompt.md  5-implement-todo-cli-app.green.prompt.md  6-add-persistent-storage.green.prompt.md
specs/001-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-cli-app/checklists/: requirements.md
specs/001-todo-cli-app/contracts/: task-api-contract.md
src/: __init__.py
src/cli/: __init__.py  commands.py  main.py
src/models/: __init__.py  task.py
src/services/: __init__.py  task_manager.py
tests/: conftest.py  test_performance.py
tests/contract/: test_add_command.py  test_complete_command.py  test_delete_command.py  test_list_command.py  test_update_command.py
tests/integration/: test_session_persistence.py  test_task_lifecycle.py
tests/unit/models/: test_task.py
tests/unit/services/: test_task_manager.py
