[project]
name = "todo-cli-app"
version = "0.1.0"
description = "A Python CLI-based todo application with in-memory storage"
readme = "README.md"
authors = [{name = "Developer", email = "developer@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo = "src.cli.main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "mypy>=1.0",
    "black>=23.0",
    "flake8>=6.0",
]